# driven-pendulum

./: .gitignore  README.md  pyproject.toml
docs/: USAGE.md
scripts/: _common.py  run_all.py  run_animation.py  run_bifurcation.py  run_custom.py  run_phase_portrait.py  run_poincare.py  run_resonance.py  run_sensitivity.py  run_timeseries.py
src/driven_pendulum/: __init__.py  analysis.py  model.py  parameters.py  plotting.py  result.py
tests/: test_analysis.py  test_model.py  test_parameters.py  test_result.py
